// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperStatusModal should render component with a developer 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="mocked-styled-135 el-input-wrap-full"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Update Developer Status
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-status-incomplete"
                name="status"
                type="radio"
                value="incomplete"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-status-incomplete"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Incomplete
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-status-pending"
                name="status"
                type="radio"
                value="pending"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-status-pending"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Pending
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-status-confirmed"
                name="status"
                type="radio"
                value="confirmed"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-status-confirmed"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Confirmed
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-status-underReview"
                name="status"
                type="radio"
                value="underReview"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-status-underReview"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Under Review
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-status-removed"
                name="status"
                type="radio"
                value="removed"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-status-removed"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Removed
                </span>
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-135 el-input-wrap-full"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type undefined"
                class="mocked-styled-38 el-input"
                disabled=""
                id="test-static-id"
                name="reapitReference"
                placeholder="Reapit Reference if account confirmed"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Reapit Reference
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-135 el-input-wrap-full"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <textarea
                aria-label="Text area input field"
                class="mocked-styled-122 el-text-area"
                name="notes"
                placeholder="Notes on developer"
                type="text"
              />
              <label
                class="mocked-styled-41 el-label"
              >
                Notes
              </label>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-2 el-button-group"
        >
          <div
            class="el-button-group-align-right el-button-group-inner"
          >
            <button
              class="el-intent-neutral el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Cancel
            </button>
            <button
              class="el-intent-primary el-button"
              type="submit"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Confirm
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <form>
      <div
        class="el-mb11 el-form-layout"
      >
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Update Developer Status
          </label>
          <div
            class="el-has-grey-bg el-toggle-radio-wrap"
          >
            <input
              class="mocked-styled-127 el-toggle-radio"
              id="option-status-incomplete"
              name="status"
              type="radio"
              value="incomplete"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-status-incomplete"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-124 el-toggle-radio-item"
              >
                Incomplete
              </span>
            </label>
            <input
              class="mocked-styled-127 el-toggle-radio"
              id="option-status-pending"
              name="status"
              type="radio"
              value="pending"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-status-pending"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-124 el-toggle-radio-item"
              >
                Pending
              </span>
            </label>
            <input
              class="mocked-styled-127 el-toggle-radio"
              id="option-status-confirmed"
              name="status"
              type="radio"
              value="confirmed"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-status-confirmed"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-124 el-toggle-radio-item"
              >
                Confirmed
              </span>
            </label>
            <input
              class="mocked-styled-127 el-toggle-radio"
              id="option-status-underReview"
              name="status"
              type="radio"
              value="underReview"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-status-underReview"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-124 el-toggle-radio-item"
              >
                Under Review
              </span>
            </label>
            <input
              class="mocked-styled-127 el-toggle-radio"
              id="option-status-removed"
              name="status"
              type="radio"
              value="removed"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-status-removed"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-124 el-toggle-radio-item"
              >
                Removed
              </span>
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type undefined"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="reapitReference"
              placeholder="Reapit Reference if account confirmed"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Reapit Reference
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <textarea
              aria-label="Text area input field"
              class="mocked-styled-122 el-text-area"
              name="notes"
              placeholder="Notes on developer"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
            >
              Notes
            </label>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-right el-button-group-inner"
        >
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="submit"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperStatusModal should render component with no developer 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
